--- a/passwordwarning.html
+++ b/passwordwarning.html
@@ -31,14 +31,20 @@
 		<header>
 			<h1>Chatham Direct Login</h1>
 		</header>
-		<form action="" id="remind" name="reset">
-			<p>To reset your account, enter a new password and then verify it to continue. </p> 
-			<label for"newpassword">New Password</label>
-			<input type="password" placeholder="New password" id="newpassword" tabindex=4 required />
-			<label for"confirmpasswordpassword">Confirm Password</label>
-			<input type="password" placeholder="Re-enter New Password" id="confirmpassword" tabindex=5 required />
-			<input type="submit" value="Reset Password" class="reset" tabindex=6 />
-		</form>	
+		<div class="alert warning">
+			<a href="#" class="icon close">Close</a>
+			<p>Sorry, that password didn't match our records. Do you need <a href="loginhelp.html">help logging in</a>?</p> 
+		</div> <!-- alert warning -->
+		<form action="" id="login" name="login">
+			<label for"username">Username</label>
+			<input type="text" placeholder="Username" id="username" autofocus tabindex=1 required />
+			<label for"password">Password</label>
+			<input type="password" placeholder="Password" id="password" tabindex=2 required />
+			<input type="submit" value="Log In" tabindex=3 />
+			<span>
+				<a href="loginhelp.html">I need help logging in</a>
+			</span>
+		</form>
 		<footer>
 			<p>© 1991-2013 Chatham Financial</p>
 		</footer>
