Minor change to the responsive style.

--- a/loginerror.html
+++ b/loginerror.html
@@ -33,7 +33,7 @@
 		</header>
 		<div class="alert error">
 			<a href="#" class="icon close">Close</a>
-			<p>Sorry, you have exceeded the number of login attempts and your account is now locked out. An email has been sent to your account with instructions on unlocking your account.</p> 
+			<p>Sorry, you have exceeded the number of log in attempts and your account is now locked for security purposes. You will receive an email with instructions on unlocking your account.</p> 
 		</div> <!-- alert error -->
 		<form action="" id="login" name="login">
 			<label for"username">Username</label>
