--- a/resetsuccess.html
+++ b/resetsuccess.html
@@ -33,7 +33,7 @@
 		</header>
 		<div class="alert success">
 			<a href="#" class="icon close">Close</a>
-			<p>Congratulations you succesfully reset your account. Login using your new password to continue.</p> 
+			<p>Congratulations, you have succesfully reset your account. Please log in using your new password to continue.</p> 
 		</div> <!-- alert success -->
 		<form action="" id="login" name="login">
 			<label for"username">Username</label>
