Adding Remember Username and updating Copy

--- a/expired.html
+++ b/expired.html
@@ -33,7 +33,8 @@
 		</header>
 		<div class="alert error">
 			<a href="#" class="icon close">Close</a>
-			<p>Your password has expired. Please enter a new password to continue.</p> 
+			<p><strong>Time to enter a new password!</strong><br />
+				Please enter a new password that meets the security criteria to continue.</p> 
 		</div> <!-- alert error -->
 		<form action="" id="reset" name="reset">
 			<label for"newpassword">New Password</label>
