--- a/loginerror.html
+++ b/loginerror.html
@@ -33,16 +33,25 @@
 		</header>
 		<div class="alert error">
 			<a href="#" class="icon close">Close</a>
-			<p>Sorry, you have exceeded the number of log in attempts and your account is now locked for security purposes. You will receive an email with instructions on unlocking your account.</p> 
+			<p><strong>You've entered the wrong password too many times.</strong><br />
+				Looks like you need some help logging in. We've emailed you some instructions to get you going again.
+			</p> 
 		</div> <!-- alert error -->
 		<form action="" id="login" name="login">
 			<label for"username">Username</label>
 			<input type="text" placeholder="Username" id="username" autofocus tabindex=1 required />
 			<label for"password">Password</label>
 			<input type="password" placeholder="Password" id="password" tabindex=2 required />
-			<input type="submit" value="Log In" tabindex=3 />
+			<div class="remember">
+				<label for"remember" class"remember">Remember Username</label>
+				<input type="checkbox" name="remember" value="remember" tabindex=3 />
+				<span>
+					Remember Username
+				</span>
+			</div> <!-- /remember -->
+			<input type="submit" value="Log In" tabindex=4 />
 			<span>
-				<a href="loginhelp.html">I need help logging in</a>
+				<a href="loginhelp.html" tabindex="5">I need help logging in</a>
 			</span>
 		</form>
 		<footer>
