Update Remember Username and minor text edits.

--- a/expired.html
+++ b/expired.html
@@ -38,9 +38,9 @@
 		</div> <!-- alert error -->
 		<form action="" id="reset" name="reset">
 			<label for"newpassword">New Password</label>
-			<input type="password" placeholder="New password" id="newpassword" tabindex=4 required />
+			<input type="password" placeholder="New password" id="newpassword" class="reset" tabindex=4 required />
 			<label for"confirmpasswordpassword">Confirm Password</label>
-			<input type="password" placeholder="Re-enter New Password" id="confirmpassword" tabindex=5 required />
+			<input type="password" placeholder="Re-enter New Password" id="confirmpassword" class="reset" tabindex=5 required />
 			<input type="submit" value="Reset Password" class="reset" tabindex=6 />
 		</form>
 		</form>
