--- a/passwordwarning.html
+++ b/passwordwarning.html
@@ -40,17 +40,12 @@
 			<input type="text" placeholder="Username" id="username" autofocus tabindex=1 required />
 			<label for"password">Password</label>
 			<input type="password" placeholder="Password" id="password" tabindex=2 required />
-			<div class="remember">
-				<label for"remember" class"remember">Remember Username</label>
+			<div class="tools">
 				<input type="checkbox" name="remember" value="remember" tabindex=3 />
-				<span>
-					Remember Username
-				</span>
-			</div> <!-- /remember -->
-			<input type="submit" value="Log In" tabindex=4 />
-			<span>
+				<label for"remember">Remember Username</label>
 				<a href="loginhelp.html" tabindex="5">I need help logging in</a>
-			</span>
+			</div> <!-- /tools -->
+			<input type="submit" value="Log In" tabindex=4 />
 		</form>
 		<footer>
 			<p>© 1991-2013 Chatham Financial</p>
