--- a/reset.html
+++ b/reset.html
@@ -31,12 +31,12 @@
 		<header>
 			<h1>Chatham Direct Login</h1>
 		</header>
-		<form action="" id="remind" name="reset">
-			<p>To reset your account, enter a new password and then verify it to continue. </p> 
+		<form action="" id="login" name="login">
+			<p>Enter a new password and verify it to reset your password. </p> 
 			<label for"newpassword">New Password</label>
-			<input type="password" placeholder="New password" id="newpassword" tabindex=4 required />
-			<label for"confirmpasswordpassword">Confirm Password</label>
-			<input type="password" placeholder="Re-enter New Password" id="confirmpassword" tabindex=5 required />
+			<input type="password" placeholder="New password" id="newpassword" class="reset" tabindex=4 required />
+			<label for"confirmpassword">Confirm Password</label>
+			<input type="password" placeholder="Re-enter New Password" id="confirmpassword" class="reset" tabindex=5 required />
 			<input type="submit" value="Reset Password" class="reset" tabindex=6 />
 		</form>	
 		<footer>
