Changed logo, made logo link, update button colors.

--- a/loginhelp.html
+++ b/loginhelp.html
@@ -29,7 +29,7 @@
 	</div>
 	<main>
 		<header>
-			<h1>Chatham Direct Login</h1>
+			<h1><a href="login.html">Chatham Direct Login</a></h1>
 		</header>
 		<form action="" id="remind" name="remind">
 			<p>Please enter the email address associated with this account and we'll send some help your way.</p> 
