--- a/passwordwarning.html
+++ b/passwordwarning.html
@@ -29,7 +29,7 @@
 	</div>
 	<main>
 		<header>
-			<h1>Chatham Direct Login</h1>
+			<h1><a href="login.html">Chatham Direct Login</a></h1>
 		</header>
 		<div class="alert warning">
 			<a href="#" class="icon close">Close</a>
