--- a/reset.html
+++ b/reset.html
@@ -29,7 +29,7 @@
 	</div>
 	<main>
 		<header>
-			<h1>Chatham Direct Login</h1>
+			<h1><a href="login.html">Chatham Direct Login</a></h1>
 		</header>
 		<form action="" id="login" name="login">
 			<p>Enter a new password and verify it to reset your password. </p> 
