--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
 	</div>
 	<main>
 		<header>
-			<h1>Chatham Direct Login</h1>
+			<h1><a href="login.html">Chatham Direct Login</a></h1>
 		</header>
 		<form action="" id="login" name="login">
 			<label for"username">Username</label>
