--- a/loginerror.html
+++ b/loginerror.html
@@ -6,7 +6,7 @@
 <title>Chatham Direct Login</title>
 <link rel="stylesheet" type="text/css" href="styles/style.css" />
 
-<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
 
 <!-- <link rel="stylesheet/less" type="text/css" href="styles/style.less" />
@@ -25,12 +25,13 @@
 			<li><a href="loginhelp.html">Login Help</a></li>
 			<li><a href="reset.html">Reset Password</a></li>
 			<li><a href="resetsuccess.html">Reset Success</a></li>
+			<li><a href="email.html">Reset Password Email</a></li>
 		</ul>
 	</div>
+	<header>
+		<h1><a href="login.html">Chatham Direct Login</a></h1>
+	</header>
 	<main>
-		<header>
-			<h1><a href="login.html">Chatham Direct Login</a></h1>
-		</header>
 		<div class="alert error">
 			<a href="#" class="icon close">Close</a>
 			<p><strong>You've entered the wrong password too many times.</strong><br />
