--- a/resetsuccess.html
+++ b/resetsuccess.html
@@ -25,7 +25,7 @@
 			<li><a href="loginhelp.html">Login Help</a></li>
 			<li><a href="reset.html">Reset Password</a></li>
 			<li><a href="resetsuccess.html">Reset Success</a></li>
-			<li><a href="email.html">Reset Password Email</a></li>
+			<li><a href="email.html">Login Help Email</a></li>
 		</ul>
 	</div>
 	<header>
