--- a/expired.html
+++ b/expired.html
@@ -23,8 +23,9 @@
 			<li><a href="loginerror.html">Login Error</a></li>
 			<li><a href="expired.html">Password Expired</a></li>
 			<li><a href="loginhelp.html">Login Help</a></li>
-			<li><a href="reset.html">Reset Password</a></li>
-			<li><a href="resetsuccess.html">Reset Success</a></li>
+			<li><a href="loginhelpsubmit.html">Login Help Submit</a></li>
+			<li><a href="change.html">Change Password</a></li>
+			<li><a href="changesuccess.html">Change Success</a></li>
 			<li><a href="email.html">Login Help Email</a></li>
 		</ul>
 	</div>
@@ -34,8 +35,8 @@
 	<main>
 		<div class="alert error">
 			<a href="#" class="icon close">Close</a>
-			<p><strong>Time to enter a new password!</strong><br />
-				Please enter a new password that meets the security criteria to continue.</p> 
+			<p><strong>Time to change your password.</strong><br />
+				Please enter a new password that meets the security criteria and verify it to continue logging in.</p> 
 		</div> <!-- alert error -->
 		<form action="" id="reset" name="reset">
 			<label for"newpassword">New Password</label>
