--- a/loginerror.html
+++ b/loginerror.html
@@ -23,8 +23,9 @@
 			<li><a href="loginerror.html">Login Error</a></li>
 			<li><a href="expired.html">Password Expired</a></li>
 			<li><a href="loginhelp.html">Login Help</a></li>
-			<li><a href="reset.html">Reset Password</a></li>
-			<li><a href="resetsuccess.html">Reset Success</a></li>
+			<li><a href="loginhelpsubmit.html">Login Help Submit</a></li>
+			<li><a href="change.html">Change Password</a></li>
+			<li><a href="changesuccess.html">Change Success</a></li>
 			<li><a href="email.html">Login Help Email</a></li>
 		</ul>
 	</div>
@@ -35,7 +36,7 @@
 		<div class="alert error">
 			<a href="#" class="icon close">Close</a>
 			<p><strong>You've entered the wrong password too many times.</strong><br />
-				Looks like you need some help logging in. We've emailed you some instructions to get you going again.
+				For security purposes your account is temporarily locked. Check your email for instructions on changing your password and getting back into your account.
 			</p> 
 		</div> <!-- alert error -->
 		<form action="" id="login" name="login">
