--- a/usernamewarning.html
+++ b/usernamewarning.html
@@ -23,8 +23,9 @@
 			<li><a href="loginerror.html">Login Error</a></li>
 			<li><a href="expired.html">Password Expired</a></li>
 			<li><a href="loginhelp.html">Login Help</a></li>
-			<li><a href="reset.html">Reset Password</a></li>
-			<li><a href="resetsuccess.html">Reset Success</a></li>
+			<li><a href="loginhelpsubmit.html">Login Help Submit</a></li>
+			<li><a href="change.html">Change Password</a></li>
+			<li><a href="changesuccess.html">Change Success</a></li>
 			<li><a href="email.html">Login Help Email</a></li>
 		</ul>
 	</div>
@@ -34,7 +35,8 @@
 	<main>
 		<div class="alert warning">
 			<a href="#" class="icon close">Close</a>
-			<p>Sorry, we didn't recognize that username. Do you need <a href="loginhelp.html">help logging in</a>?</p> 
+			<p>Sorry, we didn't recognize the username you entered. Try again if you know the correct username, or:</p>
+			<p><a href="loginhelp.html">Get help logging in</a></p> 
 		</div> <!-- alert warning -->
 		<form action="" id="login" name="login">
 			<label for"username">Username</label>
