--- a/change.html
+++ b/change.html
@@ -14,7 +14,7 @@
 
 </head>
 
-<body class="email">
+<body>
 	<div id="demoMenu">
 		<ul>
 			<li><a href="login.html">Login</a></li>
@@ -33,15 +33,17 @@
 		<h1><a href="login.html">Chatham Direct Login</a></h1>
 	</header>
 	<main>
-		<h2>Hello, **first name**!</h2>
-		<p>Your Chatham username is <strong>**username**</strong>.</p>
-		<p>If you do not remember your password and would like to change it now, use the link below. The change password link will only be active for the next few minutes.<p>
-		<a href="#">Change password now</a>
-		<p>If you do not need to change your password, log in to get started.</p>
-		<a href="#" class="btn center">Log In</a>
+		<form action="" id="login" name="login">
+			<p>Please enter a new password that meets the security criteria and verify it to continue logging in.</p> 
+			<label for"newpassword">New Password</label>
+			<input type="password" placeholder="New password" id="newpassword" class="reset" tabindex=4 required />
+			<label for"confirmpassword">Confirm Password</label>
+			<input type="password" placeholder="Re-enter New Password" id="confirmpassword" class="reset" tabindex=5 required />
+			<input type="submit" value="Change Password" class="reset" tabindex=6 />
+		</form>	
+		<footer>
+			<p>© 1991-2013 Chatham Financial</p>
+		</footer>
 	</main>
-	<footer>
-		<p>© 1991-2013 Chatham Financial</p>
-	</footer>
 </body>
 </html>
