--- a/loginhelp.html
+++ b/loginhelp.html
@@ -23,8 +23,9 @@
 			<li><a href="loginerror.html">Login Error</a></li>
 			<li><a href="expired.html">Password Expired</a></li>
 			<li><a href="loginhelp.html">Login Help</a></li>
-			<li><a href="reset.html">Reset Password</a></li>
-			<li><a href="resetsuccess.html">Reset Success</a></li>
+			<li><a href="loginhelpsubmit.html">Login Help Submit</a></li>
+			<li><a href="change.html">Change Password</a></li>
+			<li><a href="changesuccess.html">Change Success</a></li>
 			<li><a href="email.html">Login Help Email</a></li>
 		</ul>
 	</div>
@@ -33,7 +34,7 @@
 	</header>
 	<main>
 		<form action="" id="remind" name="remind">
-			<p>Please enter the email address associated with this account and we'll send some help your way.</p> 
+			<p>Enter the email address associated with your Chatham account and we'll send you some helpful login information.</p> 
 			<label for"email">Email Address</label>
 			<input type="email" placeholder="Email address" id="email" class="help" tabindex=1 required />
 			<div class="tools">
